# Brain-Computer-Interface-v3

./: 10 innovations.txt  10 invention prompts to try.txt  50 invention prompts to try.txt  PROTOTYPES.md  README.md  RUN.md  inventions_export.json  serve.ps1  serve.sh
backend/: .env.example  .gitignore  pyproject.toml
backend/bciv3/: __init__.py  bench.py  cli.py  detailer.py  llm.py  presets.py  recorder.py  research.py  simulator.py  store.py  synthesis.py
backend/bciv3/api/: __init__.py  app.py
backend/bciv3/engine/: __init__.py  inventor.py  loop.py  prompt.py
backend/bciv3/innovations/: __init__.py  base.py  catalog.py
backend/bciv3/laws/: __init__.py  biophysics.py  electronics.py  physics.py
backend/bciv3/search/: __init__.py  retrieve.py  sources.py
backend/scripts/: demo_invent.py
backend/tests/: test_api.py  test_bench.py  test_engine.py  test_laws.py  test_presets.py  test_research.py  test_search.py  test_store.py
docs/: index.html
docs/app/: app.css  index.html
docs/app/js/: catalog.js  laws.js  viewer.js
docs/assets/: theme.css
docs/data/: inventions.json  syntheses.json
