[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bciv3"
version = "0.1.0"
description = "Brain-Computer-Interface v3 — invention engine + law-based simulator for the 10 mapping innovations"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
plot = ["matplotlib>=3.7"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]

[tool.setuptools]
packages = ["bciv3", "bciv3.laws", "bciv3.innovations", "bciv3.engine", "bciv3.api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
